set(BUILD_RTTR_DYNAMIC OFF CACHE BOOL "Build the dynamic/shared version of RTTR library" FORCE)
set(BUILD_UNIT_TESTS OFF CACHE BOOL "Build the unit tests of RTTR" FORCE)
set(BUILD_STATIC ON CACHE BOOL "Build RTTR as static library" FORCE)
set(BUILD_WITH_STATIC_RUNTIME_LIBS OFF CACHE BOOL "Link against the static runtime libraries" FORCE)
set(BUILD_WITH_RTTI ON CACHE BOOL "Enable build with C++ runtime type information for compilation" FORCE)
set(BUILD_BENCHMARKS OFF CACHE BOOL "Enable this to build the benchmarks" FORCE)
set(BUILD_EXAMPLES OFF CACHE BOOL "Enable this to build the examples" FORCE)
set(BUILD_DOCUMENTATION OFF CACHE BOOL "Enable this to build the documentation" FORCE)
set(BUILD_INSTALLER OFF CACHE BOOL "Enable this to build the installer" FORCE)
set(BUILD_PACKAGE OFF CACHE BOOL "Enable this to build the installer" FORCE)
set(USE_PCH OFF CACHE BOOL "Use precompiled header files for compilation" FORCE)
set(CUSTOM_DOXYGEN_STYLE OFF CACHE BOOL "Enable this option to use a custom doxygen style for HTML documentation; Otherwise the default will be used" FORCE)
set(BUILD_WEBSITE_DOCU OFF CACHE BOOL "Enable this option to create the special docu for the website" FORCE)
set(CMAKE_REQUIRED_DEFINITIONS ${CMAKE_CXX14_STANDARD_COMPILE_OPTION})

mark_as_advanced(BUILD_RTTR_DYNAMIC)
mark_as_advanced(BUILD_UNIT_TESTS)
mark_as_advanced(BUILD_STATIC)
mark_as_advanced(BUILD_WITH_STATIC_RUNTIME_LIBS)
mark_as_advanced(BUILD_WITH_RTTI)
mark_as_advanced(BUILD_BENCHMARKS)
mark_as_advanced(BUILD_EXAMPLES)
mark_as_advanced(BUILD_DOCUMENTATION)
mark_as_advanced(BUILD_INSTALLER)
mark_as_advanced(BUILD_PACKAGE)
mark_as_advanced(USE_PCH)
mark_as_advanced(CUSTOM_DOXYGEN_STYLE)
mark_as_advanced(BUILD_WEBSITE_DOCU)

add_subdirectory( rttr )